[package]
name = "native-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-svc = "0.28.1"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.14", features = ["tokio", "http1"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
http-body-util = "0.1.3"
hyper-tls = "0.6.0"
thiserror = "2.0.12"