[package]
name = "native-svc"
version = "0.1.1"
edition = "2024"
rust-version = "1.88.0"
description = "An HTTP adapter that implements the embedded-svc interface using hyper as the backend"
license = "MIT"
repository = "https://github.com/ThalusA/native-svc"
documentation = "https://docs.rs/native-svc"
keywords = ["http", "client", "embedded-svc", "hyper", "async"]
categories = ["network-programming", "web-programming::http-client"]
authors = ["ThalusA <15985204+ThalusA@users.noreply.github.com>"]
readme = "README.md"

[dependencies]
# Embedded services trait interface
embedded-svc = "0.28.1"
# Main HTTP client with TLS support
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.14", features = ["tokio", "http1"] }
hyper-tls = "0.6.0"
# Asynchronous runtime
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
# HTTP body utilities
http-body-util = "0.1.3"
# Error handling
thiserror = "2.0.12"
